--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -181,6 +181,10 @@ li.active .m-add svg {
     border-color: #777;
 }
 
+g.x-warning-g {
+    fill: #aaa;
+}
+
 .game-cover-effect::after {
     background: linear-gradient(to left top, rgba(75, 235, 236, 0) 50%, rgba(255, 255, 255, 0.07) 80%, rgba(255, 255, 255, 0.14) 100%);
 }
