--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -75,13 +75,5 @@ if (msg) {
     }
 
 <% else %>
-    if (view === 'list') {
-        var errors = $("#t-ops").find(".add-form-errors");
-        var is_list = true;
-    } else {
-        var errors = $("#f-lone").find(".add-form-errors");
-        var is_list = false;
-    }
-    errors.html("<%= j(render partial: 'add_form_errors', locals: { errors: @errors }) %>");
-    resetFormErrors(is_list);
+    handleAddFormErrors(view, '<%= @errors.join(', ') %>');
 <% end %>
