--- a/app/views/games/edit.js.erb
+++ b/app/views/games/edit.js.erb
@@ -35,13 +35,5 @@ var view = '<%= @view %>';
         }
     });
 <% else %>
-    if (view === 'list') {
-        var $errors = $("#t-ops").find(".add-form-errors");
-        var is_list = true;
-    } else {
-        var $errors = $("#f-lone").find(".add-form-errors");
-        var is_list = false;
-    }
-    $errors.html("<%= j(render partial: 'add_form_errors', locals: { errors: @errors }) %>");
-    resetFormErrors(is_list);
+    handleAddFormErrors(view, '<%= @errors.join(', ') %>');
 <% end %>
