--- a/app/views/my_games/_edit_form.html.erb
+++ b/app/views/my_games/_edit_form.html.erb
@@ -6,7 +6,6 @@
 <%= hidden_field_tag :last_physical, game.physical %>
 <%= hidden_field_tag :view, view %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
-
 <div class="action uk-grid-collapse" uk-grid>
     <div>
         <label class="c-m chosen">Edit</label>
@@ -15,7 +14,6 @@
         <%= game_name %>
     </div>
 </div>
-
 <hr class="md">
 <div id="platform-option">
     <% if game[:platforms] %>
@@ -40,5 +38,6 @@
         <label><%= f.radio_button(:physical, false, checked: !physical, class: "cf-digital") %><%= svg 'digital_icon' %> Digital</label>
     </div>
 </div>
-<button name="button" type="submit" class="cf-add-button">Edit</button><span class="add-form-errors"></span>
+<button name="button" type="submit" class="cf-add-button">Edit</button>
+<span class="add-form-errors blink_me"><%= svg 'x_warning' %><span></span></span>
 <% end %>
