--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -12,7 +12,7 @@
         <%= svg 'eye_hidden' %>
       </button>
       <span id="reset-ok" class="sign-icon"><%= svg 'key' %></span>
-      <span class="warning-icon blink_me login-er"></span>
+      <span class="blink_me login-er"><%= svg 'warning' %></span>
       <p id="password-min">6 characters minimum</p>
     </div>
     <div class="submit">
