--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -243,6 +243,9 @@ table.set-email-pass {
 }
 
 .set-warning {
+    width: 30px;
+    height: 30px;
+    position: absolute;
     top: 5px;
     left: 5px;
     display: none;
