Add show_notification js method.

--- a/app/views/collections/_problem_msg.js.erb
+++ b/app/views/collections/_problem_msg.js.erb
@@ -1,6 +1,1 @@
-UIkit.notification({
-    message: $('<div/>').html('<%= @message %>').text(),
-    status: 'warning',
-    pos: 'top-right',
-    timeout: 5000
-});
+show_notification('<%= @message %>');
