--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -1,9 +1,4 @@
-UIkit.notification({
-    message: $('<div/>').html('<%= @message %>').text(),
-    status: 'warning',
-    pos: 'top-right',
-    timeout: 5000
-});
+show_notification('<%= @message %>');
 
 var data = { view: '<%= @view %>' };
 data = addRqRsToData(data);
