--- a/app/views/my_games/_edit_form.html.erb
+++ b/app/views/my_games/_edit_form.html.erb
@@ -1,10 +1,10 @@
 <% game_name, igdb_id, id = game.name, game.igdb_id, game.id %>
 <%= form_for(:game, url: edit_path, remote: true) do |f| %>
-<%= hidden_field_tag :current, collection.id %>
-<%= hidden_field_tag :game_id, id %>
-<%= hidden_field_tag :last_platform, game.platform_name %>
-<%= hidden_field_tag :last_physical, game.physical %>
 <%= hidden_field_tag :view, view %>
+<%= hidden_field_tag :collection, collection.id %>
+<%= f.hidden_field :game_id, id %>
+<%= f.hidden_field :last_platform, game.platform_name %>
+<%= f.hidden_field :last_physical, game.physical %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
 <div class="action uk-grid-collapse" uk-grid>
     <div>
