--- a/app/views/my_games/_edit_form.html.erb
+++ b/app/views/my_games/_edit_form.html.erb
@@ -2,9 +2,9 @@
 <%= form_for(:game, url: edit_path, remote: true) do |f| %>
 <%= hidden_field_tag :view, view %>
 <%= hidden_field_tag :collection, collection.id %>
-<%= f.hidden_field :game_id, id %>
-<%= f.hidden_field :last_platform, game.platform_name %>
-<%= f.hidden_field :last_physical, game.physical %>
+<%= f.hidden_field :id, value: id %>
+<%= f.hidden_field :last_platform, value: game.platform_name %>
+<%= f.hidden_field :last_physical, value: game.physical %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
 <div class="action uk-grid-collapse" uk-grid>
     <div>
@@ -21,7 +21,6 @@
     <% else %>
         <% select_platforms = user_platforms_for_select %>
     <% end %>
-    <%= f.hidden_field :needs_platform, value: false %>
     <div class="uk-margin select-platform">
         <div uk-form-custom="target: > * > span:last-child">
             <%= f.select(:platform, select_platforms) %>
