--- a/app/views/my_games/_copy_form.html.erb
+++ b/app/views/my_games/_copy_form.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(:game, url: copy_or_move_path, remote: true) do |f| %>
 <%= hidden_field_tag :current, collection.id %>
 <%= hidden_field_tag :view, view %>
-<%= f.hidden_field :game_id, value: id %>
+<%= f.hidden_field :id, value: id %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
 <div class="action uk-grid-collapse" uk-grid>
     <div class="cm-inputs">
