--- a/app/views/charts/_graphs.js.erb
+++ b/app/views/charts/_graphs.js.erb
@@ -14,6 +14,7 @@ var by_release = "<%= j(render partial: 'by_release', locals: { data: @charts_da
 var by_developer = "<%= j(render partial: 'by_developer', locals: { data: @charts_data[:chart_5], needs_platform: @needs_platform, shared: shared }) %>";
 <% end %>
 
+var shared = <%= shared %>;
 var overall = <%= @overall %>;
 var needs_platform = <%= @needs_platform %>;
 var stats = <%= raw @charts_data[:stats] %>;
@@ -28,7 +29,7 @@ var $li_by_platform = $('#li-by-platform');
 var $li_by_collection = $('#li-by-collection');
 
 var $chg_stats = $('.chg-stats');
-var overall_text = ['Account created:', 'Total number of games:', 'Largest collection:'];
+var overall_text = [null, 'Total number of games:', 'Largest collection:'];
 var single_coll_text = ['Created:', 'Requires platform, format:', 'Number of games:'];
 
 $('.stat').each(function(i) {
@@ -42,6 +43,7 @@ $('.stat').each(function(i) {
 
 if (overall) {
 
+    overall_text[0] = shared ? 'Link created:' : 'Account created:'
     $chg_stats.each(function(i) {
         $(this).text(overall_text[i]);
     });
