--- a/app/views/search/_already_in.html.erb
+++ b/app/views/search/_already_in.html.erb
@@ -1,4 +1,4 @@
-<% if results = check_for_games(igdb_id: igdb_id) %>
+<% if results = check_for_games(igdb_id) %>
   <div class="title strike">
   <span>Already owned:</span>
   </div>
