--- a/app/views/shared/_cover_show.html.erb
+++ b/app/views/shared/_cover_show.html.erb
@@ -42,7 +42,7 @@
     <% end %>
 </p>
 <% end %>
-<% summary = get_summary(game, 280, 50) %>
+<% summary = get_summary(game) %>
 <% screens = game[:screenshots] %>
 <% if summary || screens %>
 <% extra_class = summary ? 'btm-m15' : '' %>
