--- a/app/views/my_games/_copy_form.html.erb
+++ b/app/views/my_games/_copy_form.html.erb
@@ -17,7 +17,7 @@
 <hr class="md">
 <div class="select-collection">
     <div uk-form-custom="target: > * > span:last-child">
-        <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), include_blank: 'Select collection') %>
+        <%= select_tag(:collection, options_for_select(collections_for_select), include_blank: 'Select collection') %>
         <span class="bigs">
             <span class="cf-collection-icon"><%= svg 'shelf_icon' %></span>
             <span></span>
@@ -29,7 +29,7 @@
     <% if game[:platforms] %>
     <% select_platforms = platforms_for_select(game) %>
     <% else %>
-    <% select_platforms = user_platforms_for_select %>
+    <% select_platforms = current_user.platforms_for_select %>
     <% end %>
     <%= f.hidden_field :needs_platform, value: false %>
     <div class="uk-margin select-platform">
