--- a/app/views/my_games/_edit_form.html.erb
+++ b/app/views/my_games/_edit_form.html.erb
@@ -19,7 +19,7 @@
     <% if game[:platforms] %>
         <% select_platforms = platforms_for_select(game) %>
     <% else %>
-        <% select_platforms = user_platforms_for_select %>
+        <% select_platforms = current_user.platforms_for_select %>
     <% end %>
     <div class="uk-margin select-platform">
         <div uk-form-custom="target: > * > span:last-child">
