--- a/app/views/shared/_panel_show.html.erb
+++ b/app/views/shared/_panel_show.html.erb
@@ -16,7 +16,7 @@
         <a class="pd-arr right" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
     </div>
     <% end %>
-    <% if summary = get_summary(game, 280, 50) %>
+    <% if summary = get_summary(game) %>
     <p class="g-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= g_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="shortSummary(<%= g_id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= g_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= g_id %>)" uk-icon="icon: triangle-up"></button></span>
 </p>
 <% end %>
