--- a/app/views/policies/_about.html.erb
+++ b/app/views/policies/_about.html.erb
@@ -1,1 +1,21 @@
-<p class="main">Hi!<span>Last updated: January 06, 2020</span></p>
+<p class="main">Hi!<span>Last updated: February 15, 2020</span></p>
+
+<p>I’m Mike and welcome to StillHaveThem, my first web app!</p>
+
+<img class="drawing" src="https://still-have-them.s3.eu-central-1.amazonaws.com/about_me.png" alt="">
+
+<p>As described on the landing page, it is a simple tool to help you maintain your video game collection. The design goal for StillHaveThem was to make service that provides clean, distraction-free space for user and his games. Place where your games are in the spotlight and essential tools are easily available without the need to navigate through many subpages.</p>
+
+
+<p>I built this project to improve my web development skills and keep track of my video game collection. Check <%= link_to 'my humble collection', 'https://www.stillhavethem.com/shared/test',class: 'me-link', target: :_blank %>. Nonetheless, it is very usable, and it will stay. So why not try it out? Maybe you’ll find it useful.</p>
+
+<p>If you have any questions/suggestions or found a bug, please contact me by email at <%= link_to 'support@stillhavethem.com', 'mailto:support@stillhavethem.com', class: 'me-link' %></p>
+
+<p>If you want to see some WET and messy code, check the <%= link_to 'GitHub page of this project', 'https://github.com/MDrawc/YVGC', class: 'me-link', target: :_blank %>.</p>
+
+<p>StillHaveThem uses <%= link_to 'IGDB Free Video Game Database API', 'https://api.igdb.com/', class: 'me-link', target: :_blank %> for finding games, game info and covers/screenshots.</p>
+<p>If you love games be sure to check out <%= link_to 'IGDB', 'https://www.igdb.com/discover', class: 'me-link', target: :_blank %>.</p>
+
+<p style="line-height: 50px;">Thanks for visiting StillHaveThem!</p>
+
+
