Fix sample collection link again. Thank you Tomek.

--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   </div>
   <div>
-    <%= link_to root_url + 'shared/sample_collection', class: 'uk-button lp-button lp-sample lp-big', target: '_blank' do %>
+    <%= link_to root_url + 'shared/samplecollection', class: 'uk-button lp-button lp-sample lp-big', target: '_blank' do %>
     <span><%= svg 'shelf28' %></span>
     View a sample collection
     <% end %>
